9/20/11 use LinearFunction in VerticalSliderDragHandler
# 2.00.00 (53048) Jun 11, 2011
# 1.00.14 (53028) Jun 10, 2011
6/10/11 fix: when plate size changes, recompute occlusion of wire that connects to bottom of capacitor plate
6/10/11 change request: when E-field detector is first made visible, adjust probe location if centering it would intersect the top plate
6/10/11 change request: adjust initial locations of bar maters in MC tab so that text doesn't intersect wires of any circuits
6/10/11 add intermediate ControlPanelNode to E-Field Detector, to simplify layout
6/10/11 fix: adjust E-field detector control panel layout so that things don't get crowded on Windows
# 1.00.13 (52989) Jun 9, 2011
6/9/11 #2936, completed followup on code review and all tickets created as a result of code review
6/9/11 #2943, create knob drag handler class in battery voltage slider node
6/9/11 #2943, factor out common drag handler for Piccolo sliders, with hook for subclasses to implement snapping
6/9/11 #2943, create knob drag handler class in capacitance control node
6/9/11 #2943, create inner class for slider in plate charge control
6/9/11 #2943, generalize knob drag handler in plate charge control, for reuse in other Piccolo sliders
6/9/11 #2936, delete CLResources, move to CapacitorLabApplication.RESOURCES
6/9/11 change order of args in AbstractCircuit constructor
6/9/11 #2944, major changes to SingleCircuit, make this is specialization of ParallelCircuit in order to remove duplicated code [52972]
6/9/11 #2945, refactor duplicate code in Wire subclasses
6/9/11 #2936, rename all *ShapeFactory to *ShapeCreator
6/9/11 #2940, hack: increase HTMLNode bounds to prevent dielectric offset drag handle from leaving artifacts
6/9/11 #2936, convert all EventListenerLists to ArrayList<T>
6/9/11 #2936, reduce font size on capacitor drag handles so that HTMLNode doesn't leave artifacts on Windows